# simple-game-using-sfml

./: CMakeCache.txt  CMakeLists.txt  README.md  run.sh
src/: AnimatedGIF.cpp  Apple.cpp  AudioEffect.cpp  Button.cpp  Buttonpress.cpp  Fruit.cpp  Game.cpp  Game.h  ImageLoader.cpp  MakeFile  Menu_to_Classic.cpp  Utility.cpp  main.cpp  main1.cpp  runsfml  state.cpp  state.h
src/include/: AnimatedGIF.h  Apple.h  AudioEffect.h  Button.h  Buttonpress.h  Fruit.h  Game.h  GameStats.h  ImageLoader.h  Menu_to_Classic.h  Utility.h
